--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-	  <title>Story by HTML5 UP</title>
+	  <title>礼賛Clap</title>
 	  <meta charset="utf-8" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	  <link rel="stylesheet" href="assets/css/main.css" />
+	  <link rel="stylesheet" href="assets/css/main.css" />n
           <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
