--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
         <!-- One -->
-          <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+          <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-up">
             <div class="content">
               <h1>礼賛Clap</h1>
-              <p class="major">礼賛Clapの紹介用文書<a href="https://html5up.net">メンバー紹介</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
-              <ul class="actions stacked">
-                <li><a href="#first" class="button big wide smooth-scroll-middle">リンクへ飛ぶための文章</a></li>
-              </ul>
             </div>
-            <div class="image">
-              <img src="images/banner.jpg" alt="" />
+            <div class="image background">
             </div>
           </section>
 
@@ -34,8 +29,12 @@
         <!-- One to Two -->
           <section class="wrapper style1 align-center">
             <div class="inner">
-              <h2>公演情報</h2>
-              <p>次回公演情報</p>
+              <h2>人間万歳</h2>
+              <p>2022.05.08(日) 岐阜市文化センター 小ホール<br>
+                <br>
+                日本に生まれ、人として生きている。<br>
+                それってじつはとっても素敵なことだと思う。<br>
+              </p>
             </div>
 
             <!-- Gallery -->
@@ -62,299 +61,43 @@
         <!-- Two -->
           <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
             <div class="content">
-              <h2>代表　〇〇〇〇</h2>
-              <p>挨拶文書　〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
+              <h2>代表 井深真也 (太鼓)</h2>
               <ul class="actions stacked">
-                <li><a href="#" class="button">リンク</a></li>
+                <!-- <li><a href="#" class="button">リンク</a></li> -->
               </ul>
             </div>
             <div class="image">
-              <img src="images/spotlight01.jpg" alt="" />
+              <img src="images/IMG_6867.JPG" alt="" />
             </div>
           </section>
 
         <!-- Three -->
-          <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+          <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in wide-images">
             <div class="content">
-              <h2>メンバー名</h2>
-              <p>挨拶文書　〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
+              <h2>和道</h2>
+              <p>波多野 将大(太鼓/唄)<br>北川 祐介(太鼓/三味線)<br>横山 旬(太鼓/笛)</p>
               <ul class="actions stacked">
-                <li><a href="#" class="button">リンク</a></li>
+                <!-- <li><a href="#" class="button">リンク</a></li> -->
               </ul>
             </div>
-            <div class="image">
-              <img src="images/spotlight02.jpg" alt="" />
+            <div class="image" style="align-self:center;">
+              <img src="images/LA1_1497.jpg" class="wide" alt="" style="height: auto;" />
             </div>
           </section>
 
         <!-- Four -->
           <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
             <div class="content">
-              <h2>メンバー名</h2>
-              <p>挨拶文書　〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇</p>
+              <h2>OKINA (太鼓)</h2>
               <ul class="actions stacked">
-                <li><a href="#" class="button">Learn More</a></li>
+                <!-- <li><a href="#" class="button">Learn More</a></li> -->
               </ul>
             </div>
             <div class="image">
-              <img src="images/spotlight03.jpg" alt="" />
+              <img src="images/IMG_0957.JPG" alt="" />
             </div>
           </section>
-
-        <!-- Five -->
-          <section class="wrapper style1 align-center">
-            <div class="inner">
-              <h2>Photo</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-            </div>
-
-            <!-- Gallery -->
-              <div class="gallery style2 medium lightbox onscroll-fade-in">
-                <article>
-                  <a href="images/gallery/fulls/01.jpg" class="image">
-                    <img src="images/gallery/thumbs/01.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Ipsum Dolor</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/02.jpg" class="image">
-                    <img src="images/gallery/thumbs/02.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Feugiat Lorem</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/03.jpg" class="image">
-                    <img src="images/gallery/thumbs/03.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Magna Amet</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/04.jpg" class="image">
-                    <img src="images/gallery/thumbs/04.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Sed Tempus</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/05.jpg" class="image">
-                    <img src="images/gallery/thumbs/05.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Ultrices Magna</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/06.jpg" class="image">
-                    <img src="images/gallery/thumbs/06.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Sed Tempus</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/07.jpg" class="image">
-                    <img src="images/gallery/thumbs/07.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Ipsum Lorem</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/08.jpg" class="image">
-                    <img src="images/gallery/thumbs/08.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Magna Risus</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/09.jpg" class="image">
-                    <img src="images/gallery/thumbs/09.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Tempus Dolor</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/10.jpg" class="image">
-                    <img src="images/gallery/thumbs/10.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Sed Etiam</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/11.jpg" class="image">
-                    <img src="images/gallery/thumbs/11.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Magna Lorem</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-                <article>
-                  <a href="images/gallery/fulls/12.jpg" class="image">
-                    <img src="images/gallery/thumbs/12.jpg" alt="" />
-                  </a>
-                  <div class="caption">
-                    <h3>Ipsum Dolor</h3>
-                    <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                    <ul class="actions fixed">
-                      <li><span class="button small">Details</span></li>
-                    </ul>
-                  </div>
-                </article>
-              </div>
-
-          </section>
-
-        <!-- Six -->
-          <section class="wrapper style1 align-center">
-            <div class="inner">
-              <h2>Ipsum sed consequat</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-              <div class="items style1 medium onscroll-fade-in">
-                <section>
-                  <span class="icon style2 major fa-gem"></span>
-                  <h3>Lorem</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-save"></span>
-                  <h3>Ipsum</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-chart-bar"></span>
-                  <h3>Dolor</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-wifi"></span>
-                  <h3>Amet</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-cog"></span>
-                  <h3>Magna</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon style2 major fa-paper-plane"></span>
-                  <h3>Tempus</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-desktop"></span>
-                  <h3>Aliquam</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-sync-alt"></span>
-                  <h3>Elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-hashtag"></span>
-                  <h3>Morbi</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-bolt"></span>
-                  <h3>Turpis</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-envelope"></span>
-                  <h3>Ultrices</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-                <section>
-                  <span class="icon solid style2 major fa-leaf"></span>
-                  <h3>Risus</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-                </section>
-              </div>
-            </div>
-          </section>
-
-        <!-- Seven -->
-          <section class="wrapper style1 align-center">
-            <div class="inner medium">
-              <h2>Get in touch</h2>
-              <form method="post" action="#">
-                <div class="fields">
-                  <div class="field half">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" value="" />
-                  </div>
-                  <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" value="" />
-                  </div>
-                  <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="6"></textarea>
-                  </div>
-                </div>
-                <ul class="actions special">
-                  <li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-                </ul>
-              </form>
-
-            </div>
-          </section>
-
+          
         <!-- Footer -->
           <footer class="wrapper style1 align-center">
             <div class="inner">
@@ -365,7 +108,7 @@
                 <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                 <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
               </ul>
-              <p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+              <p>&copy; 2022 <a href="">礼賛Clap</a>. All Right Reserved.</p>
             </div>
           </footer>
 
@@ -379,6 +122,7 @@
       <script src="assets/js/breakpoints.min.js"></script>
       <script src="assets/js/util.js"></script>
       <script src="assets/js/main.js"></script>
+      <script src="assets/js/customize.js"></script>
 
   </body>
 </html>
