誤字を修正

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Two -->
           <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
             <div class="content">
-              <h2>代表 井深真也 (太鼓)</h2>
+              <h2>代表 井深慎也 (太鼓)</h2>
               <ul class="actions stacked">
                 <!-- <li><a href="#" class="button">リンク</a></li> -->
               </ul>
@@ -84,7 +84,7 @@
           <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in wide-images">
             <div class="content">
               <h2>和道</h2>
-              <p>波多野 将大(太鼓/唄)<br>北川 祐介(太鼓/三味線)<br>横山 旬(太鼓/笛)</p>
+              <p>波多野 翔大(太鼓/唄)<br>北川 祐介(太鼓/三味線)<br>横山 旬(太鼓/笛)</p>
               <ul class="actions stacked">
                 <!-- <li><a href="#" class="button">リンク</a></li> -->
               </ul>
