写真の差し替え

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </ul>
             </div>
             <div class="image">
-              <img src="images/IMG_6867.JPG" alt="" />
+              <img src="images/DSC08729.JPG" alt="" />
             </div>
           </section>
 
