拡張子の修正

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </ul>
             </div>
             <div class="image">
-              <img src="images/DSC08729.JPG" alt="" />
+              <img src="images/DSC08729.jpg" alt="" />
             </div>
           </section>
 
