誤字の修正

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- One -->
           <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-up">
             <div class="content">
-              <h1>礼賛Clap</h1>
+              <h1>礼讃Clap</h1>
             </div>
             <div class="image background">
             </div>
