--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Two -->
           <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
             <div class="content">
-              <h2>代表 井深慎也 (太鼓)</h2>
+              <h2>代表  井深 慎也 (太鼓)</h2>
               <ul class="actions stacked">
                 <!-- <li><a href="#" class="button">リンク</a></li> -->
               </ul>
@@ -106,16 +106,27 @@
               <img src="images/IMG_0957.JPG" alt="" />
             </div>
           </section>
+
+          <!-- Four -->
+          <section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in">
+            <div class="content">
+              <h2>渡邊 雄貴 (笛)</h2>
+              <ul class="actions stacked">
+                <!-- <li><a href="#" class="button">Learn More</a></li> -->
+              </ul>
+            </div>
+            <div class="image">
+              <img src="images/ArtistSide.JPG" alt="" />
+            </div>
+          </section>
+
           
-        <!-- Footer -->
+          <!-- Footer -->
           <footer class="wrapper style1 align-center">
             <div class="inner">
               <ul class="icons">
-                <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://twitter.com/RaisanClap" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.instagram.com/raisan_clap_/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
               </ul>
               <p>&copy; 2022 <a href="">礼賛Clap</a>. All Right Reserved.</p>
             </div>
