--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="ja">
 	<head>
-	  <title>礼賛Clap</title>
+	  <title>礼讃Clap</title>
 	  <meta charset="utf-8" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	  <link rel="stylesheet" href="assets/css/main.css" />
