--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
       <script src="assets/js/customize.js"></script>
       <script>
         $(".raisan").backstretch(
-          ["/images/pic01.jpg",
-          "/images/pic02.jpg"
+          ["/images/top01.jpeg",
+          "/images/top02.jpeg",
+          "/images/top03.jpeg"
         ],
         {druation:8000,fade:500})
 
