--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
       <script src="assets/js/customize.js"></script>
       <script>
         $(".raisan").backstretch(
-          ["/images/top01.jpeg",
-          "/images/top02.jpeg",
-          "/images/top03.jpeg"
-        ],
+          ["/images/pic01.jpg",
+          "/images/pic02.jpg",
+          "/images/pic03.jpg"
+        ],ß
         {druation:8000,fade:500})
 
       </script>
