問い合わせフォーム実装

--- a/index.html
+++ b/index.html
@@ -129,8 +129,48 @@
             <div class="image">
               <img src="images/backgrounderaser_1645006729.jpg" alt="" />
             </div>
-                    </section>
-                    
+          </section>
+
+          <section class="form align-center">
+            <h2>お問い合わせ</h2>
+            <div class="content">
+              <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScUtHeSwr38X-QuaPKSJgidxJxtvN9kBYcvOmGA3qPuh-1p9w/viewform?usp=sf_link">フォームへ</a>
+            </div>
+
+          </section>
+
+
+          <!--
+          <section class="wrapper style1 align-center">
+            <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScUtHeSwr38X-QuaPKSJgidxJxtvN9kBYcvOmGA3qPuh-1p9w/formResponse" method="post">
+              <div class="content">
+              <div class="fields">
+                <div class="field">
+                  <label for="name">お名前</label>
+                  <input type="text" name="name" id="entry.1282766708" value required>
+                </div>
+                <div class="field">
+                  <label for="email">メールアドレス</label>
+                  <input type="text" name="email" id="entry.1125669241" value required>
+                </div>
+                <div class="field">
+                  <label for="title">件名</label>
+                  <input type="text" name="title" id="entry.1868873740" value required>
+                </div>
+                <div class="field">
+                  <label for="message">本文</label>
+                  <textarea name="message" id="entry.2114237777" rows="9"></textarea>
+                </div>
+                <ul class="actions">
+                  <li>
+                  <input type="submit" name="submit" id="submit" value="送信">
+                </li>
+              </ul>
+              </div>
+            </form>
+          </div>
+          </section>
+        -->
           <!-- Footer -->
           <footer class="wrapper style1 align-center">
             <div class="inner">
