動画を追加

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 日本に生まれ、人として生きている。<br>
                 それってじつはとっても素敵なことだと思う。<br>
               </p>
+              <div class="youtube">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8Xi0fewANXU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
             <!-- Gallery -->
               <div class="gallery style2 medium lightbox onscroll-fade-in liveinfo">
@@ -66,7 +69,6 @@
           </section>
           
           <!-- Two -->
-
           <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
             <div class="content">
               <h2>代表  井深 慎也 (太鼓)</h2>
