--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </section>
 
         <!-- Three -->
-          <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in wide-images">
+          <section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in wide-images">
             <div class="content">
               <h2>和道</h2>
               <p>波多野 翔大(太鼓/唄)<br>北川 祐介(太鼓/三味線)<br>横山 旬(太鼓/笛)</p>
@@ -121,7 +121,7 @@
             </div>
           </section>
 
-          <section class="spotlight style1 orient-right content-align-right image-position-center onscroll-image-fade-in wide-images">
+          <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in wide-images">
             <div class="content">
               <h2>伊藤 千尋 (民謡)</h2>
               <ul class="actions stacked">
@@ -130,6 +130,29 @@
             </div>
             <div class="image">
               <img src="images/backgrounderaser_1645006729.jpg" alt="" />
+            </div>
+          </section>
+          <section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in wide-images">
+            <div class="content">
+              <h2>山川　拳 (三味線)</h2>
+              <ul class="actions stacked">
+                <!-- <li><a href="#" class="button">Learn More</a></li> -->
+              </ul>
+            </div>
+            <div class="image">
+              <img src="images/yamawaka.jpg" alt="" />
+            </div>
+          </section>
+          <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in wide-images">
+            <div class="content">
+              <h2>和太鼓　一刀</h2>
+              <p>安藤　勇汰(太鼓)<br>佐伯　杏菜(太鼓)<br>高瀬　陽菜(太鼓)</p>
+              <ul class="actions stacked">
+                <!-- <li><a href="#" class="button">Learn More</a></li> -->
+              </ul>
+            </div>
+            <div class="image">
+              <img src="images/itto.jpg" alt="" />
             </div>
           </section>
 
@@ -198,12 +221,20 @@
       <script src="assets/js/main.js"></script>
       <script src="assets/js/customize.js"></script>
       <script>
-        $(".raisan").backstretch(
-          ["/images/pic01.jpg",
-          "/images/pic02.jpg",
-          "/images/pic03.jpg"
-        ],
-        {druation:8000,fade:500})
+      
+        if(window.matchMedia("(max-width: 768px)").matches){
+          $(".raisan").backstretch(
+            ["/images/toph01.jpg","/images/toph02.jpg"],
+            {druation:8000,fade:500})        
+
+        }else{
+          $(".raisan").backstretch(
+            ["/images/top01.jpeg",
+            "/images/top02.jpeg",
+            "/images/top03.jpeg"
+          ],
+          {druation:8000,fade:500})
+        }
 
       </script>
   </body>
