--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
             <div class="content">
               <h2>OKINA (太鼓)</h2>
               <ul class="actions stacked">
+                <div class="youtube">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/QYgu0mQRuLk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <!-- <li><a href="#" class="button">Learn More</a></li> -->
               </ul>
             </div>
