終演の文章追加

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <!-- One to Two -->
           <section class="wrapper style1 align-center">
             <div class="inner">
-              <h2>人間万歳</h2>
-              <p>2022.05.08(日) 岐阜市文化センター 小ホール<br>
+              <h2>人間万歳 (終演)</h2>
+              <p>ご来場ありがとうございました。
+                <br>2022.05.08(日) 岐阜市文化センター 小ホール<br>
                 <br>
                 日本に生まれ、人として生きている。<br>
                 それってじつはとっても素敵なことだと思う。<br>
